# shellce

./: Cargo.toml  README.md  config.toml
src/: main.rs
src/commands/: command.rs  count.rs  echo.rs  exec.rs  exit.rs  fs.rs  greet.rs  help.rs  list_vars.rs  mod.rs  ping.rs  remember.rs  save_load.rs  sleep.rs  source.rs
src/core/: config.rs  dispatcher.rs  mod.rs  types.rs  variables.rs
src/parser/: mod.rs  variable_resolver.rs
src/storage/: mod.rs
src/util/: mod.rs
